--- a/doc-Monitoring_Alerts_and_Reporting/topics/Changing_Report_Views.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Changing_Report_Views.adoc
@@ -8,6 +8,6 @@ Where applicable, you will see these additional buttons.
 . Click the report to view.
   Click one of the following buttons for the view you want.
 +
-* Click  image:images/2284.png[]for Graph View.
-* Click  image:images/2285.png[]for Hybrid View.
-* Click  image:images/2022.png[]for Tabular View.
+* Click  image:images/2284.png[]for *Graph View*.
+* Click  image:images/2285.png[]for *Hybrid View*.
+* Click  image:images/2022.png[]for *Tabular View*.
