--- a/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
@@ -104,7 +104,7 @@ image:images/2141.png[]
 
 |
 
-								Orphaned: An orphaned virtual machine has no host but has a datastore associated with it. Orphaned virtual machines are those that have been removed from their providers but still exists on the storage. An orphan virtual machine is unable to identify the associated host. A virtual machine also shows as orphaned if it exists on a different host than the host expected by the provider's server.
+								Orphaned: An orphaned virtual machine has no host but has a datastore associated with it. Orphaned virtual machines are those that have been removed from their providers but still exist on the storage. An orphaned virtual machine is unable to identify the associated host. A virtual machine also shows as orphaned if it exists on a different host than the host expected by the provider's server.
 
 
 
