Updated the content in the Configuration of SSL Encryption section to add clarity based on SME feedback.

--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -16,7 +16,7 @@ Under an appliance, you will most likely use HTTPS, and, therefore, the websocke
 
 *Configuration of SSL Encryption*
 
-You can control the encryption of data between proxy processes running on the appliance and the browser using SSL. All paths are relative to vmdb/
+You can control the encryption of data between proxy processes running on the appliance and the browser using SSL. All paths are relative to the `/var/www/miq/vmdb/` directory. In other words, the `/cert` directory referenced below is found in the `/vmdb` directory.
 
 ------
 >server: 
