Fixed method name to address the bug 1313164

--- a/doc-Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
+++ b/doc-Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
@@ -3468,7 +3468,7 @@ The following methods can be used on a virtual machine or template object.
 
 | 
 							
-								shutdownGuest
+								shutdown_guest
 							
 						
 | 
