Changing anchor ref.

--- a/Installing_on_RHEV/Configuring_Appliance.adoc
+++ b/Installing_on_RHEV/Configuring_Appliance.adoc
@@ -1,4 +1,4 @@
-[[Configuring-cloudforms]]
+[[Configuring-the-appliance]]
 == Configuring {product-title}
 
 Although the {product-title} appliance comes configured to be integrated immediately into your environment, you can make some changes to its configuration.
