--- a/auth/active_directory.adoc
+++ b/auth/active_directory.adoc
@@ -126,13 +126,13 @@ Create the Apache configuration files
 # TEMPLATE_DIR="/var/www/miq/system/TEMPLATE"
 # cp ${TEMPLATE_DIR}/etc/pam.d/httpd-auth                         \
                     /etc/pam.d/httpd-auth
-# cp ${TEMPLATE_DIR}/etc/httpd/conf.d/cfme-remote-user.conf       \
+# cp ${TEMPLATE_DIR}/etc/httpd/conf.d/manageiq-remote-user.conf       \
                     /etc/httpd/conf.d/
-# cp ${TEMPLATE_DIR}/etc/httpd/conf.d/cfme-external-auth.conf.erb \
-                    /etc/httpd/conf.d/cfme-external-auth.conf
+# cp ${TEMPLATE_DIR}/etc/httpd/conf.d/manageiq-external-auth.conf.erb \
+                    /etc/httpd/conf.d/manageiq-external-auth.conf
 ----
 
-Update the Apache configuration file */etc/httpd/conf.d/cfme-external-auth.conf* as follows
+Update the Apache configuration file */etc/httpd/conf.d/manageiq-external-auth.conf* as follows
 to specify the correct AD domain, and reference the Kerberos keytab appropriately.
 
 ----
