updated names as requested and completed replacement of words in these files

--- a/defining_policies_and_profiles/master.adoc
+++ b/defining_policies_and_profiles/master.adoc
@@ -1,5 +1,5 @@
 = Defining Policies and Profiles
-CloudForms Documentation Team <{product-title}-docs@redhat.com>
+{product-title} Documentation Team <{product-title}-docs@{product-title}.com>
 :imagesdir: images
 :vernum: 7
 :toc: left
