--- a/defining_policies_and_profiles/topics/to_create_a_compliance_policy.adoc
+++ b/defining_policies_and_profiles/topics/to_create_a_compliance_policy.adoc
@@ -1,9 +1,9 @@
 ==== Creating a Compliance Policy
 
-Create compliance policies by assigning or creating a condition. CloudForms Management Engine automatically assigns the events and actions to the compliance policy as opposed to a control policy where you must define this yourself. The VM or host compliance check event is
+Create compliance policies by assigning or creating a condition. {product-title} automatically assigns the events and actions to the compliance policy as opposed to a control policy where you must define this yourself. The VM or host compliance check event is
 assigned to the compliance policy. A compliance policy runs the mark as compliant action when the virtual machine or host passes all of the conditions. If any of the conditions are not met, then the virtual machine or host is marked as non-compliant.
 
-If you do not know how to create a condition, see link:https://access.redhat.com/documentation/en/red-hat-{product-title}/version-4.1-beta/defining-policies-and-profiles/#Creating_a_new_Policy_Condition[Creating a new Policy Condition]. Carefully plan the purpose of your policy before creating it. You can also use a scope expression that is tested immediately when the compliance check event
+If you do not know how to create a condition, see link:https://access.{product-title}.com/documentation/en/{product-title}-{product-title}/version-{product-version}-beta/defining-policies-and-profiles/#Creating_a_new_Policy_Condition[Creating a new Policy Condition]. Carefully plan the purpose of your policy before creating it. You can also use a scope expression that is tested immediately when the compliance check event
 triggers the policy. If the item is out of scope, then the policy does not continue on to the conditions, and none of the associated actions run.
 
 . Navigate to menu:Control[Explorer].
