--- a/defining_policies_and_profiles/topics/to_create_a_condition_to_check_file_contents_of_a_host.adoc
+++ b/defining_policies_and_profiles/topics/to_create_a_condition_to_check_file_contents_of_a_host.adoc
@@ -1,9 +1,9 @@
 ==== Creating a Compliance Condition to Check Host File Contents
 
-CloudForms Management Engine Control provides the ability to create a compliance condition that checks file contents. Use this to be sure that internal operating system settings meet your security criteria. Regular expressions are used to create the search pattern. Test your regular
+{product-title} Control provides the ability to create a compliance condition that checks file contents. Use this to be sure that internal operating system settings meet your security criteria. Regular expressions are used to create the search pattern. Test your regular
 expressions thoroughly before using them in a production environment.
 
-Note that to search file contents you will need to have collected the file using a host analysis profile. See the link:https://access.redhat.com/documentation/en/red-hat-{product-title}/version-4.1-beta/managing-infrastructure-and-inventory/#sect_hosts[Hosts] chapter in the *Managing Infrastructure and Inventory* guide for instructions.
+Note that to search file contents you will need to have collected the file using a host analysis profile. See the link:https://access.{product-title}.com/documentation/en/{product-title}-{product-title}/version-{product-version}-beta/managing-infrastructure-and-inventory/#sect_hosts[Hosts] chapter in the *Managing Infrastructure and Inventory* guide for instructions.
 
 . Navigate to menu:Control[Explorer].
 
