--- a/defining_policies_and_profiles/topics/to_create_an_e-mail_action.adoc
+++ b/defining_policies_and_profiles/topics/to_create_an_e-mail_action.adoc
@@ -1,6 +1,6 @@
 ==== Creating an E-mail Action
 
-To send emails from the CloudForms Management Engine server, you must have the notifier server role enabled and have defined settings for SMTP email. For further information regarding SMTP, see the link:https://access.redhat.com/documentation/en/red-hat-{product-title}/4.1/general-configuration/general-configuration[General Configuration]
+To send emails from the {product-title} server, you must have the notifier server role enabled and have defined settings for SMTP email. For further information regarding SMTP, see the link:https://access.{product-title}.com/documentation/en/{product-title}-{product-title}/{product-version}/general-configuration/general-configuration[General Configuration]
 guide.
 
 . Navigate to menu:Control[Explorer].
