--- a/defining_policies_and_profiles/topics/to_create_an_snmp_action.adoc
+++ b/defining_policies_and_profiles/topics/to_create_an_snmp_action.adoc
@@ -1,6 +1,6 @@
 ==== Creating an SNMP Action
 
-To send SNMP traps from the CloudForms Management Engine server, you must have the `Notifier` server role and the SNMP daemons enabled. For information on enabling SNMP, see the link:https://access.redhat.com/documentation/en/red-hat-{product-title}/4.1/general-configuration/general-configuration[General Configuration]
+To send SNMP traps from the {product-title} server, you must have the `Notifier` server role and the SNMP daemons enabled. For information on enabling SNMP, see the link:https://access.{product-title}.com/documentation/en/{product-title}-{product-title}/{product-version}/general-configuration/general-configuration[General Configuration]
 guide.
 
 . Navigate to menu:Control[Explorer].
