PR Review Changes:
- Removed misleading 7.2 Appliance wording.

--- a/auth/saml.adoc
+++ b/auth/saml.adoc
@@ -5,7 +5,7 @@
 External Authentication on the Appliance has been enhanced to support SAML.
 The SAML implementation has been tested with KeyCloak 1.8.
 
-In this guide we will cover how to manually configure a 7.2 Appliance's
+In this guide we will cover how to manually configure an Appliance's
 external authentication to work with SAML. The SAML implementation has been
 tested with KeyCloak but is implemented generically using Apache's mod_auth_mellon
 module and should work with other SAML Identity Providers.
