Update API examples after Provider types have changed
The rename happened during v2.0/v2.1 transition. At this point we
perhaps want to have the examples using the latest greatest to avoid
user surprises.

--- a/api/examples/create_provider.adoc
+++ b/api/examples/create_provider.adoc
@@ -11,7 +11,7 @@ POST /api/providers
 [source,json]
 ----
 {
-  "type"      : "EmsRedhat",
+  "type"      : "ManageIQ::Providers::Redhat::InfraManager",
   "name"      : "rhevm101",
   "hostname"  : "rhevm101",
   "ipaddress" : "100.200.300.101",
@@ -37,7 +37,7 @@ POST /api/providers
       "updated_on": "2015-05-05T15:47:41Z",
       "guid": "10360312-f33e-11e4-86c7-b8e85646e742",
       "zone_id": 1,
-      "type": "EmsRedhat"
+      "type": "ManageIQ::Providers::Redhat::InfraManager"
     }
   ]
 }
