--- a/api/examples/create_provider_compound_credentials.adoc
+++ b/api/examples/create_provider_compound_credentials.adoc
@@ -11,7 +11,7 @@ POST /api/providers
 [source,json]
 ----
 {
-  "type"      : "EmsRedhat",
+  "type"      : "ManageIQ::Providers::Redhat::InfraManager",
   "name"      : "rhevm102",
   "hostname"  : "rhevm102",
   "ipaddress" : "100.200.300.102",
@@ -44,7 +44,7 @@ POST /api/providers
       "updated_on": "2015-05-05T15:57:44Z",
       "guid": "acbd610e-f3f6-11e4-aaba-b8e85646e742",
       "zone_id": 1,
-      "type": "EmsRedhat"
+      "type": "ManageIQ::Providers::Redhat::InfraManager"
     }
   ]
 }
