--- a/api/examples/update_provider.adoc
+++ b/api/examples/update_provider.adoc
@@ -37,7 +37,7 @@ POST /api/providers/106
   "updated_on": "2015-05-06T13:53:06Z",
   "guid": "acbd610e-f3f6-11e4-aaba-b8e85646e742",
   "zone_id": 1,
-  "type": "EmsRedhat"
+  "type": "ManageIQ::Providers::Redhat::InfraManager"
 }
 ----
 
