--- a/api/overview/crud.adoc
+++ b/api/overview/crud.adoc
@@ -44,7 +44,7 @@ Create a new provider: *POST /api/providers*
 curl --user admin:smartvm
       -i -X POST -H "Accept: application/json"
       -d '{
-            "type"      : "EmsRedhat",
+            "type"      : "ManageIQ::Providers::Redhat::InfraManager",
             "name"      : "RHEVM Provider",
             "hostname"  : "rhevm.local.com",
             "ipaddress" : "192.168.5.1",
