--- a/api/overview/query.adoc
+++ b/api/overview/query.adoc
@@ -33,6 +33,7 @@ returned in the collection and not just the href. See
 |Sorting | |
 | |sort_by=atr1,atr2,... |By which attribute(s) to sort the result by
 | |sort_order=ascending or descending |Order of the sort
+| |sort_options=ignore_case |Option for case insensitive sort
 |=======================================================================
 
 * The *count* attribute in a collection always denotes the total number
