--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -2,9 +2,22 @@
 [[manageiq-rest-api-version-history]]
 == Version History
 
-[cols="1<,1<,1<,3<",options="header",]
+[cols="1,1,1,3",options="header"]
 |=======================================================================
 |API Version |Entrypoints |Published |Description
+|*2.2.0* |/api, /api/v2.2.0 |June 2016 |CRUD on Groups,
+CRUD on Users,
+Updating a Host password,
+Service Reconfigure action,
+Additional Vm collection actions,
+Instance collection actions,
+Approve/Deny provision and automation requests,
+Delete one's own authentication token,
+Filtering enhancements to support virtual attributes,
+Querying enhancements to support case insensitive sorting,
+CRUD on Tenant quotas,
+Exposing read-only subset of Settings,
+Shopping Carts
 |*2.1.0* |/api, /api/v2.1.0 |November 2015 |CRUD on Tenants,
 CRUD on Categories and Tags,
 CRUD on User Roles,
