--- a/api/reference/automation_requests.adoc
+++ b/api/reference/automation_requests.adoc
@@ -9,6 +9,13 @@ Automation requests are made available via the following entrypoint.
 /api/automation_requests
 ----
 
+* link:#creating-requests[Creating Requests]
+* link:#approving-denying-requests[Approving or Denying Requests]
+* link:#monitoring-requests[Monitoring Requests]
+
+[[creating-requests]]
+=== Creating Requests
+
 Either by specifying a _create_ action or by posting the automation request directly
 to */api/automation_requests*.
 
@@ -34,8 +41,47 @@ As an example:
 }
 ----
 
-[[monitoring-request]]
-=== Monitoring Request
+[[approving-denying-requests]]
+=== Approving or Denying Requests
+
+If an automation request is not auto approved, it can be approved or denied via the
+actions _approve_ and _deny_ on the automation request resource.
+
+[[approving-request]]
+==== Approving a Request
+
+[source,data]
+----
+POST /api/automation_requests/:id
+----
+
+[source,json]
+----
+{
+  "action" : "approve",
+  "reason" : "reason for approval"
+}
+----
+
+[[denying-request]]
+==== Denying a Request
+
+[source,data]
+----
+POST /api/automation_requests/:id
+----
+
+[source,json]
+----
+{
+  "action" : "deny",
+  "reason" : "reason for denial"
+}
+----
+
+
+[[monitoring-requests]]
+=== Monitoring Requests
 
 Once an automation request is created, the response will be the queryable 
 automation request itself, i.e. */api/automation_request/:id*
