--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -20,12 +20,15 @@ Where :collection is one of the following:
 |chargebacks | Chargebacks
 |clusters | Clusters
 |conditions | Conditions
+|currencies | Currencies
 |data_stores | Datastores
 |events | Events
 |features | Product Features
 |flavors | Flavors
 |groups | Groups
 |hosts | Hosts
+|instances | Instances
+|measures | Measures
 |pictures | Pictures
 |policies | Policies
 |policy_actions | Actions
@@ -44,9 +47,11 @@ Where :collection is one of the following:
 |servers | EVM Servers
 |service_catalogs | Service Catalogs
 |service_dialogs | Service Dialogs
+|service_orders | Service Orders
 |service_requests | Service Requests
 |service_templates | Service Templates
 |services | Services
+|settings | Settings
 |tags | Tags
 |tasks | Tasks
 |templates | Templates
