--- a/api/reference/tenants.adoc
+++ b/api/reference/tenants.adoc
@@ -15,6 +15,21 @@ Management of tenants is through:
 * link:#editing-tenants[Editing Tenants]
 * link:#deleting-tenants[Deleting Tenants]
 
+[[tenant-quota-management]]
+== Tenant Quota Management
+
+Tenant Quota management is made available via the _quotas_ subcollection of tenant resources
+as follows:
+
+[source,data]
+----
+/api/tenants/:id/quotas
+----
+
+* link:#creating-tenant-quotas[Creating Tenant Quotas]
+* link:#editing-tenant-quotas[Editing Tenant Quotas]
+* link:#deleting-tenant-quotas[Deleting Tenant Quotas]
+
 [[creating-tenants]]
 === Creating Tenants
 
@@ -127,6 +142,106 @@ POST /api/tenants
   "action" : "delete",
   "resources" : [
     { "href" : "http://localhost:3000/api/tenants/:id" }
+  ]
+}
+----
+
+[[creating-tenant-quotas]]
+=== Creating Tenant Quotas
+
+Creating a quota for a specific tenant is done as follows:
+
+----
+POST /api/tenants/:id/quotas
+----
+
+[source,json]
+----
+{
+  "name" : "cpu_allocated",
+  "value" : 1
+}
+----
+
+[[editing-tenant-quotas]]
+=== Editing Tenant Quotas
+
+----
+POST /api/tenants/:id/quotas/:quota_id
+----
+
+[source,json]
+----
+{
+  "action" : "edit",
+  "resource" : {
+    "value" : 5
+  }
+}
+----
+
+Multiple quotas for a tenant can also be edited in a single request as follows:
+
+----
+POST /api/tenants/1/quotas
+----
+
+[source,json]
+----
+{
+  "action" : "edit",
+  "resources" : [
+    {
+      "href" : "http://localhost:3000/api/tenants/1/quotas/5",
+      "value" : 11
+    },
+    { "href" : "http://localhost:3000/api/tenants/1/quotas/6",
+      "value" : 12
+    },
+    ...
+  ]
+}
+----
+
+
+[[deleting-tenant-quotas]]
+=== Deleting Tenant Quotas
+
+Quotas of a tenant can be deleted via the _delete_ action as follows:
+
+----
+POST /api/tenants/:id/quotas/:quota_id
+----
+
+[source,json]
+----
+{
+  "action" : "delete"
+}
+----
+
+
+or via the DELETE HTTP method
+
+----
+DELETE /api/tenants/:id/quotas/:quota_id
+----
+
+Multiple quotas of a tenant can be deleted in a single request
+as shown in the following example:
+
+----
+POST /api/tenants/1/quotas
+----
+
+[source,json]
+----
+{
+  "action" : "delete",
+  "resources" : [
+    { "href" : "http://localhost:3000/api/tenants/1/quotas/7" },
+    { "href" : "http://localhost:3000/api/tenants/1/quotas/8" },
+    ...
   ]
 }
 ----
