[auth] Fix AsciiDoctor warning for saml.doc

--- a/auth/saml.adoc
+++ b/auth/saml.adoc
@@ -207,7 +207,7 @@ in _Configure->Configuration->Access Control_
 If the Local Login has been disabled in the Administrative UI and there is a need to be able
 to login as _admin_, the Local Login can be re-enabled as follows:
 
-==== Administrative UI:
+=== Administrative UI:
 
 This option is available if the Identity Provider is available and one can login using a user
 with enough administrative privileges to update it:
@@ -215,7 +215,7 @@ with enough administrative privileges to update it:
 * Login as administrative user,
 * In then in _Configure->Configuration->Authentication_ uncheck _Disable Local Login_ and save.
 
-==== Appliance Console Interface:
+=== Appliance Console Interface:
 
 * ssh to the appliance as root
 * Run _appliance_console_
@@ -223,7 +223,7 @@ with enough administrative privileges to update it:
 * Select _Enable Local Login_
 * then _Apply updates_
 
-==== Appliance Console CLI:
+=== Appliance Console CLI:
 
 * ssh to the appliance as root
 * Run _appliance_console_cli --extauth-opts_ *local_login_disabled=false*
