PR Review Changes
- Typos
- Fixing consistency on gerund of verbs for titles
- Fixing 204 OK -> No Content

--- a/api/overview/auth.adoc
+++ b/api/overview/auth.adoc
@@ -142,7 +142,7 @@ Response for the token DELETE request:
 
 [source,data]
 ----
-HTTP/1.1 204 OK
+HTTP/1.1 204 No Content
 ----
 
 [[api-token-ttl-configuration]]
