--- a/api/reference/groups.adoc
+++ b/api/reference/groups.adoc
@@ -20,7 +20,7 @@ Full CRUD actions on groups is available:
 [[querying-groups]]
 === Querying Groups
 
-Querying all groups in the system is simply:
+Querying all groups in the system:
 
 ----
 GET /api/groups
