--- a/api/reference/instances.adoc
+++ b/api/reference/instances.adoc
@@ -9,24 +9,24 @@ Management of Instances adds support for the following actions:
 | Action | Description
 | start | Starts an Instance
 | stop | Stops an Instance
-| suspend | Suspends an Instance
-| pause | Pauses an Instance
-| reboot_guest | Reboots Guest in an Instance
-| reset | Resets an Instance
-| shelve | Shelves an Instance
-| terminate | Terminates an Instance
+| suspend | Suspending an Instance
+| pause | Pausing an Instance
+| reboot_guest | Rebooting Guest in an Instance
+| reset | Resetting an Instance
+| shelve | Shelving an Instance
+| terminate | Terminating an Instance
 |=====================
 
 * link:#targeting-instances[Targeting Instances]
 * link:#querying-instances[Querying Instances]
 * link:#start-instance[Starting an Instance]
 * link:#stop-instance[Stopping an Instance]
-* link:#suspend-instance[Suspends an Instance]
-* link:#pause-instance[Pauses an Instance]
-* link:#reboot-guest-instance[Reboots Guest in an Instance]
-* link:#reset-instance[Resets an Instance]
-* link:#shelve-instance[Shelves an Instance]
-* link:#terminate-instance[Terminates an Instance]
+* link:#suspend-instance[Suspending an Instance]
+* link:#pause-instance[Pausing an Instance]
+* link:#reboot-guest-instance[Rebooting Guest in an Instance]
+* link:#reset-instance[Resetting an Instance]
+* link:#shelve-instance[Shelving an Instance]
+* link:#terminate-instance[Terminating an Instance]
 
 [[targeting-instances]]
 === Targeting Instances
@@ -48,7 +48,7 @@ As simply as POSTing the following action to an Instance.
 ----
 
 
-Requests can also be made on multiple instances by targetting the primary collection:
+Requests can also be made on multiple instances by targeting the primary collection:
 
 [source,data]
 ----
@@ -121,7 +121,7 @@ link:../overview/query.html[Querying] page.
 ----
 
 [[terminate-instance]]
-=== Terminating and Instance
+=== Terminating an Instance
 
 [source,json]
 ----
@@ -151,7 +151,7 @@ link:../overview/query.html[Querying] page.
 ----
 
 [[reset-instance]]
-=== Reset an Instance
+=== Resetting an Instance
 
 [source,json]
 ----
