--- a/api/reference/service_orders.adoc
+++ b/api/reference/service_orders.adoc
@@ -16,8 +16,8 @@ Available actions on service_orders instances include:
 |=====================
 | Action | Description
 | create | Creating the Shopping Cart
-| clear | Clears the Shopping Cart
-| order | Orders all service requests in the Shopping Cart
+| clear | Clearing the Shopping Cart
+| order | Ordering all service requests in the Shopping Cart
 | delete | Deleting the Shopping Cart
 |=====================
 
@@ -101,7 +101,7 @@ POST /api/service_orders
 ----
 
 
-Create a wish list service_order:
+Creating a wish list service_order:
 
 [source,data]
 ----
