--- a/api/reference/services.adoc
+++ b/api/reference/services.adoc
@@ -363,7 +363,7 @@ POST /api/services/:id
 [[service-reconfiguring]]
 ==== Service Reconfiguring
 
-When a service is defined with an Reconfigure Automation Entrypoint, the _reconfigure_ action is shown
+When a service is defined with a Reconfigure Automation Entrypoint, the _reconfigure_ action is shown
 as a valid action for that service.
 
 This action takes any of the dialog fields the service supports during reconfiguration.
